Add test scripts for LinkedIn bot and selectors, enhance utils for better output
- Created `test_bot.py` to validate bot functionality, including module imports, method checks, configuration validation, and UTF-8 encoding.
- Created `test_linkedin_selectors.py` to test CSS and XPath selectors on LinkedIn job listings, including saving the HTML page and analyzing job-related classes.
- Updated `utils.py` to ensure consistent output flushing and improved Chrome browser options for isolated profiles, including automation detection prevention.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 chrome_selenium_profile
-
 chrome_temp
-
-data
-
-__pycache__
+selenium_profile/
+data/
+__pycache__/
+*.pyc
+*.log
+Applied_Jobs_*.txt
